# trae-test

./: .clinerules  .gitattributes  .gitignore  .gitlab-ci.yml  .vscodeignore  AGENTS.md  CMakeLists.txt  README.md  generate_docs.py  integrated_test.c  integrated_test.h  main.c  main.h  mkdocs.yml  requirements-mcp.txt  start.s  unit_test.c  unit_test.h
.trae/: config.json  mcp.json
.trae/rules/: development_guidelines.md
docs/: index.md  index_cn.md  index_en.md  index_tw.md
docs/01_software_requirements/: requirement_cn.md  requirement_en.md  requirement_tw.md
docs/02_software_architecture/: software_architecture_cn.md  software_architecture_cn_cline.md  software_architecture_cn_gemini.md  software_architecture_en.md  software_architecture_en_cline.md  software_architecture_en_gemini.md  software_architecture_tw.md  software_architecture_tw_cline.md  software_architecture_tw_gemini.md
docs/03_software_detailed_design/: software_design_cn.md  software_design_cn_Cline.md  software_design_cn_gemini.md  software_design_en.md  software_design_en_Cline.md  software_design_en_gemini.md  software_design_tw.md  software_design_tw_Cline.md  software_design_tw_gemini.md
docs/04_software_unit_verification/: coverage_report.md  unit_test_cn.md  unit_test_cn_Cline.md  unit_test_cn_gemini.md  unit_test_en.md  unit_test_en_Cline.md  unit_test_en_gemini.md  unit_test_tw.md  unit_test_tw_Cline.md  unit_test_tw_gemini.md
docs/05_software_integration_test/: coverage_report.md  integrated_test_cn.md  integrated_test_cn_Cline.md  integrated_test_cn_gemini.md  integrated_test_en.md  integrated_test_en_Cline.md  integrated_test_en_gemini.md  integrated_test_tw.md  integrated_test_tw_Cline.md  integrated_test_tw_gemini.md  lizard_report.md  misra_report.md
docs/code_review_record/: code_review.md
docs/javascripts/: lang-switcher.js
docs/misra/: MISRA_Rule.txt
docs/stylesheets/: extra.css
inc/: main.h
integration_test/: integrated_test.c  integrated_test.h
src/: main.c  make_misra_error.c  start.s
tools/: gen_code_review.py  gen_coverage_report.py  gen_func_docs.py  gen_integration_coverage_report.py  gen_misra_report.py  gen_module_graph.py  run_lizard.py
tools/ninja/: ninja_env.cmake
unit_test/: unit_test.c  unit_test.h
(+12 files in other folders)
